k8s/ilyin-website/ilyin-website-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: ilyin-website
  name: ilyin-website
spec:
  finalizers:
  - kubernetes
