k8s/ilyin-website/www-ilyin-website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    app: www-ilyin-website
  name: www-ilyin-website-deployment
  namespace: ilyin-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www-ilyin-website
  template:
    metadata:
      labels:
        app: www-ilyin-website
    spec:
      containers:
      - name: www-ilyin-website-deployment
        #image: tilyin/www-ilyin-website
        image: registry.digitalocean.com/tilyin-repo/www-ilyin-website
        resources:
          requests:
            #memory: "64Mi"
            cpu: "250m"
          limits:
            #memory: "128Mi"
            cpu: "500m"      
        ports:
        - containerPort: 3000
      imagePullSecrets:
      #- name: tilyin-dockerhub
      - name: registry-tilyin-repo
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: www-ilyin-website-service
  namespace: ilyin-website
spec:
  selector:
    app: www-ilyin-website
  ports:
  - name: www-ilyin-website
    protocol: TCP
    port: 3080
    targetPort: 3000
