k8s/ilyin-website/www-ilyin-website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ilyin-website-ingress
  namespace: ilyin-website
  annotations:
    kubernetes.io/ingress.class: nginx
    # this solves issue: All hosts are taken by other resources
    acme.cert-manager.io/http01-edit-in-place: "true"    
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - www.ilyin.website
    secretName: www.ilyin.website-tls
  rules:
  - host: www.ilyin.website
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: www-ilyin-website-service
              port:
                number: 3080
